<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>HAI925I</groupId>
  <artifactId>Td2</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Td2</name>
  <description>Persistence Layer</description>
  <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
		<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
  			 <groupId>mysql</groupId>
   			 <artifactId>mysql-connector-java</artifactId>
  			 <version>8.0.31</version>
		</dependency>   
		<!-- ОТКЛЮЧЕНО: Spring Data REST (автоматические endpoints)
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
	<!-- par defaut tomcat comme moteur d'application web -->   
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
		<dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
 <!--           <version>3.1.0</version>    -->
        </dependency> 
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency> 

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- Hot Reload для разработки -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>
		<!-- Apache Lucene для SloppyMath (calcul de distance géographique) -->
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>9.8.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!-- UMLDoclet - автоматическая генерация UML только для моделей -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<configuration>
					<doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
					<docletArtifact>
						<groupId>nl.talsmasoftware</groupId>
						<artifactId>umldoclet</artifactId>
						<version>2.1.0</version>
					</docletArtifact>
					<!-- Только пакет моделей -->
					<subpackages>Ex.modele</subpackages>
					<additionalOptions>
						<additionalOption>-umlImageFormat PNG</additionalOption>
						<additionalOption>-umlImageDirectory ${project.build.directory}/uml</additionalOption>
					</additionalOptions>
					<useStandardDocletOptions>false</useStandardDocletOptions>
					<failOnWarnings>false</failOnWarnings>
					<failOnError>false</failOnError>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
